fixed button bug not being pressed because navbar is covering

--- a/src/App.css
+++ b/src/App.css
@@ -440,6 +440,7 @@ body.resume-background {
   cursor: pointer;
   font-size: 14px;
   transition: all 0.15s ease;
+  z-index: 9999;
 }
 
 .projectsFilterBtn:hover {
